# ai-sentinel

./: pyproject.toml
src/ai_sentinel/: email_service.py  oauth2_credential_manager.py  youtube_analysis_tool.py  youtube_auth.py  youtube_cli.py
